--- a/frontend/app/templates/partials/_footer.hbs
+++ b/frontend/app/templates/partials/_footer.hbs
@@ -3,6 +3,6 @@
     <div class="pull-right hidden-xs">
       Built by <a href="http://www.arinhouck.com" target="_blank" title="Arin Houck Web Development"> Arin Houck </a>
     </div>
-    <strong>Copyright &copy; 2015 {{#link-to "index"}}Gradebuildr{{/link-to}}.</strong> All rights reserved.
+    <strong>Copyright &copy; 2015 <a href="mailto:contact@gradebuildr.com">Gradebuildr</a>.</strong> All rights reserved.
   </footer>
 </div>
