--- a/frontend/app/templates/dashboard/profile/subscriptions.hbs
+++ b/frontend/app/templates/dashboard/profile/subscriptions.hbs
@@ -9,7 +9,7 @@
             </div>
             <ul class="list-group">
                 <li class="list-group-item"><i class="icon-ok text-success"></i> Organization use</li>
-                <li class="list-group-item"><i class="icon-ok text-success"></i> 25 students</li>
+                <li class="list-group-item"><i class="icon-ok text-success"></i> <b>25</b> students</li>
                 <li class="list-group-item"><i class="icon-ok text-success"></i> 24/7 support</li>
             </ul>
             <div class="price-table-footer">
@@ -30,7 +30,7 @@
             </div>
             <ul class="list-group">
                 <li class="list-group-item"><i class="icon-ok text-success"></i> Organization use</li>
-                <li class="list-group-item"><i class="icon-ok text-success"></i> 100 students</li>
+                <li class="list-group-item"><i class="icon-ok text-success"></i> <b>100</b> students</li>
                 <li class="list-group-item"><i class="icon-ok text-success"></i> 24/7 support</li>
             </ul>
             <div class="price-table-footer">
@@ -51,7 +51,7 @@
             </div>
             <ul class="list-group">
                 <li class="list-group-item"><i class="icon-ok text-success"></i> Organization use</li>
-                <li class="list-group-item"><i class="icon-ok text-success"></i> Unlimited students</li>
+                <li class="list-group-item"><i class="icon-ok text-success"></i> <b><i>Unlimited</i></b> students</li>
                 <li class="list-group-item"><i class="icon-ok text-success"></i> 24/7 support</li>
             </ul>
             <div class="price-table-footer">
