growl small refactor

--- a/frontend/app/templates/dashboard/profile/subscriptions/cancel.hbs
+++ b/frontend/app/templates/dashboard/profile/subscriptions/cancel.hbs
@@ -8,6 +8,7 @@
     <div class="box-body">
       <p class='lead'>
         You will no longer be charged after cancellation takes effect.<br>
+        If you changed subscription plans during current month then you will be charged prorated cost on your next bill period.<br>
         There will be no refund on current month's service.<br>
         Your service will stay active until end of subscription.
       </p>
