--- a/frontend/app/templates/dashboard/grades.hbs
+++ b/frontend/app/templates/dashboard/grades.hbs
@@ -25,6 +25,7 @@
                 <th>Class</th>
                 <th>Semester</th>
                 <th>Score</th>
+                <th>Weighted Percentage</th>
                 <th>Weight</th>
                 <th>Actions</th>
               </tr>
