small style changes

--- a/frontend/app/templates/dashboard/courses.hbs
+++ b/frontend/app/templates/dashboard/courses.hbs
@@ -41,7 +41,7 @@
                     {{course.creditHours}}
                   </td>
                   <td>
-                    {{course.currentGrade}} %
+                    {{course.currentGrade}}<small>%</small>
                   </td>
                   <td>
                     {{course.gradingScale}}
