--- a/frontend/app/templates/dashboard/index.hbs
+++ b/frontend/app/templates/dashboard/index.hbs
@@ -79,6 +79,7 @@
                     <th>Course</th>
                     <th>Semester</th>
                     <th>Score</th>
+                    <th>Weighted Percentage</th>
                     <th>Weight</th>
                   </tr>
                 </thead>
