--- a/frontend/app/templates/dashboard/students/show.hbs
+++ b/frontend/app/templates/dashboard/students/show.hbs
@@ -126,6 +126,7 @@
               <th>Class</th>
               <th>Semester</th>
               <th>Score</th>
+              <th>Weighted Percentage</th>
               <th>Weight</th>
             </tr>
           </thead>
