--- a/frontend/app/templates/components/grade-row.hbs
+++ b/frontend/app/templates/components/grade-row.hbs
@@ -2,8 +2,8 @@
 <td>{{grade.course.name}}</td>
 <td>{{grade.course.semester}}</td>
 <td><h4>{{grade.score}} <small>/{{grade.scoreTotal}}</small></h4></td>
-<td>{{grade.percentage}}%</td>
-<td><span class="label label-primary">{{grade.weight.name}} {{grade.weight.percentage}}%</span></td>
+<td>{{grade.percentage}}<small>%</small></td>
+<td><span class="label label-primary">{{grade.weight.name}} {{grade.weight.percentage}}<small>%</small></span></td>
 {{#unless hideActions}}
 <td>
   {{#link-to 'dashboard.grades.edit' grade class="btn btn-default btn-flat btn-xs"}}
