--- a/frontend/app/templates/dashboard/students/index.hbs
+++ b/frontend/app/templates/dashboard/students/index.hbs
@@ -1,3 +1,23 @@
+<div class="row">
+  <div class="col-sm-6 col-xs-12">
+    <div class="info-box">
+      <span class="info-box-icon bg-aqua">{{fa-icon 'pie-chart'}}</span>
+      <div class="info-box-content">
+        <span class="info-box-text">Average Semester GPA</span>
+        <span class="info-box-number">{{averageSemesterGPA}}</span>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-xs-12">
+    <div class="info-box">
+      <span class="info-box-icon bg-orange">{{fa-icon 'bar-chart'}}</span>
+      <div class="info-box-content">
+        <span class="info-box-text">Average Cumulative GPA</span>
+        <span class="info-box-number">{{averageCumulativeGPA}}</span>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="box box-default">
   <div class="box-body">
   <div class="table-responsive">
