--- a/frontend/app/templates/components/user-menu.hbs
+++ b/frontend/app/templates/components/user-menu.hbs
@@ -43,11 +43,11 @@
           {{loginErrorMessage}}
           <form {{action "authenticate" on="submit"}}>
           <div class="form-group">
-            <label for="identification">Email address</label><br />
+            <label for="identification">Email address</label>
             {{input value=identification placeholder="Email address" type="text" name="email" class="form-control"}}
           </div>
           <div class="form-group">
-            <label for="password">Password</label><br />
+            <label for="password">Password</label><small class='pull-right'>{{link-to 'Forget your password?' 'password.new'}}</small> 
             {{input value=password placeholder="Password" type="password" name="password" class="form-control"}}
           </div>
           <div class="form-group">
