--- a/frontend/app/templates/register.hbs
+++ b/frontend/app/templates/register.hbs
@@ -14,11 +14,11 @@
           <div class="row">
             <div class="col-sm-6">
               <label for="gradePoints">Grade Points</label>
-              {{input value=model.gradePoints class='form-control' id="gradePoints" placeholder='Enter grade points'}}
+              {{input value=model.gradePoints class='form-control' id="gradePoints" step='any' placeholder='Enter grade points'}}
             </div>
             <div class="col-sm-6">
               <label for="gradeUnits">Grade Units towards GPA</label>
-              {{input value=model.gradeUnits class='form-control' id="gradeUnits" placeholder='Enter grade units'}}
+              {{input value=model.gradeUnits class='form-control' id="gradeUnits" step='any' placeholder='Enter grade units'}}
             </div>
           </div>
         </div>
