small fixes, forgot password

--- a/frontend/app/templates/components/user-menu.hbs
+++ b/frontend/app/templates/components/user-menu.hbs
@@ -47,7 +47,7 @@
             {{input value=identification placeholder="Email address" type="text" name="email" class="form-control"}}
           </div>
           <div class="form-group">
-            <label for="password">Password</label><small class='pull-right'>{{link-to 'Forget your password?' 'password.new'}}</small> 
+            <label for="password">Password</label><small class='pull-right'>{{link-to 'Forgot your password?' 'password.new'}}</small> 
             {{input value=password placeholder="Password" type="password" name="password" class="form-control"}}
           </div>
           <div class="form-group">
