--- a/frontend/app/templates/password/new.hbs
+++ b/frontend/app/templates/password/new.hbs
@@ -1,10 +1,10 @@
 <section class="content">
   <div class="container">
-    <h2> Forget your Password </h2>
+    <h2> Forgot your Password? </h2>
     <div class="row">
       <div class="form-group col-sm-6">
         <label for="email">Email address</label>
-        {{input value=email type='email' class='form-control' id="email" placeholder='Enter email'}}
+        {{input value=email type='email' class='form-control' id="email" placeholder='Enter email' required='true'}}
       </div>
     </div>
 
