--- a/frontend/app/templates/components/grade-form.hbs
+++ b/frontend/app/templates/components/grade-form.hbs
@@ -1,17 +1,17 @@
 <div class="row">
-  <div class="col-sm-4 col-xs-6">
+  <div class="col-sm-3 col-xs-6">
     {{input value=grade.name class='form-control input-sm' required='true' placeholder='Enter grade name'}}
   </div>
   <div class="col-sm-4 col-xs-6">
-    {{view "select"
-       content=gradeWeights
-       value=grade.selectedWeight
-       optionValuePath="content.id"
-       optionLabelPath="content.name"
-       class='form-control input-sm'
-       prompt='Please select a grade weight'
-       required='true'
-    }}
+      {{view "select"
+         content=gradeWeights
+         value=grade.selectedWeight
+         optionValuePath="content.id"
+         optionLabelPath="content.name"
+         class='form-control input-sm'
+         prompt='Please select a grade weight'
+         required='true'
+      }}
   </div>
   <div class="col-sm-4 col-xs-12">
     <div class="input-group">
@@ -19,5 +19,8 @@
       <div class="input-group-addon lead no-border">/</div>
       {{input value=grade.scoreTotal class='form-control input-sm no-border' type='number' required='true' step='any' placeholder='Total'}}
     </div>
+  </div>
+  <div class="col-sm-1 center-button-sm">
+    <button type="button" {{action 'removeGrade' grade}} class="btn btn-xs btn-default btn-flat text-red" name="button" title="Remove">{{fa-icon 'minus-circle'}}</button>
   </div>
 </div>
