disable subscription tab

--- a/frontend/app/templates/dashboard/profile.hbs
+++ b/frontend/app/templates/dashboard/profile.hbs
@@ -24,8 +24,8 @@
                 {{fa-icon 'key'}} Change Password
               {{/link-to}}
             {{/link-li}}
-            {{#link-li}}
-              {{#link-to 'dashboard.profile.subscriptions'}}
+            {{#link-li class='disabled'}}
+              {{#link-to 'dashboard.profile.subscriptions' disabled=true title='Currently unavailable.'}}
                 {{fa-icon 'credit-card'}} Subscriptions
               {{/link-to}}
             {{/link-li}}
