letter grade on show

--- a/frontend/app/templates/dashboard/courses/show.hbs
+++ b/frontend/app/templates/dashboard/courses/show.hbs
@@ -13,7 +13,7 @@
             <div class="info-box-content">
               <div class="col-sm-4">
                 <span class="info-box-text">Current Grade</span>
-                <span class="info-box-number">{{model.currentGrade}} %</span>
+                <span class="info-box-number">{{model.letterGrade}} ({{model.currentGrade}} %)</span>
               </div>
               <div class="col-sm-4">
                 <span class="info-box-text">Credit Hours</span>
