--- a/frontend/app/templates/dashboard/students/show.hbs
+++ b/frontend/app/templates/dashboard/students/show.hbs
@@ -72,6 +72,7 @@
               <th>Name</th>
               <th>Credit Hours</th>
               <th>Current Grade</th>
+              <th>Letter Grade</th>
               <th>Grading Scale</th>
               <th>Semester</th>
               <th>Weights</th>
@@ -88,6 +89,9 @@
                 </td>
                 <td>
                   {{course.currentGrade}} %
+                </td>
+                <td>
+                  {{course.letterGrade}}
                 </td>
                 <td>
                   {{course.gradingScale}}
