--- a/frontend/app/templates/components/user-menu.hbs
+++ b/frontend/app/templates/components/user-menu.hbs
@@ -21,7 +21,7 @@
         </p>
       </li>
       <li class="user-footer">
-        <div class="pull-left">
+        <div class="pull-left" {{action 'toggleDropdown' }}>
           {{#link-to 'dashboard.profile.index' class='btn btn-default btn-flat'}}
             Profile
           {{/link-to}}
@@ -33,7 +33,7 @@
     </ul>
     {{/if}}
 {{else}}
-  <a {{action "toggleDropdown" }} href="#" class="rl-dropdown-toggle">
+  <a {{action 'toggleDropdown' }} href="#" class="rl-dropdown-toggle">
     <span>Login</span>
   </a>
 
@@ -47,7 +47,7 @@
             {{input value=identification placeholder="Email address" type="text" name="email" class="form-control"}}
           </div>
           <div class="form-group">
-            <label for="password">Password</label><small class='pull-right'>{{link-to 'Forgot your password?' 'password.new'}}</small> 
+            <label for="password">Password</label><small class='pull-right'>{{link-to 'Forgot your password?' 'password.new'}}</small>
             {{input value=password placeholder="Password" type="password" name="password" class="form-control"}}
           </div>
           <div class="form-group">
