id for active semester select

--- a/frontend/app/templates/register.hbs
+++ b/frontend/app/templates/register.hbs
@@ -28,6 +28,7 @@
              content=semesterNames
              value=model.activeSemester
              class='form-control'
+             id='activeSemester'
              prompt='Please select a semester'
              required='true'
           }}
