session login spec

--- a/frontend/app/templates/components/user-menu.hbs
+++ b/frontend/app/templates/components/user-menu.hbs
@@ -33,7 +33,7 @@
     </ul>
     {{/if}}
 {{else}}
-  <a {{action 'toggleDropdown' }} href="#" class="rl-dropdown-toggle">
+  <a {{action 'toggleDropdown' }} href="#" id="login-nav" class="rl-dropdown-toggle">
     <span>Login</span>
   </a>
 
