--- a/frontend/app/templates/components/user-menu.hbs
+++ b/frontend/app/templates/components/user-menu.hbs
@@ -1,5 +1,5 @@
 {{#if session.isAuthenticated}}
-    <a {{action "toggleDropdown"}} class="rl-dropdown-toggle">
+    <a {{action "toggleDropdown"}} class="rl-dropdown-toggle" id="user-menu-link">
       {{gravatar-image email=session.currentUser.email class='user-image'}}
       <span class="hidden-xs">{{session.currentUser.name}}</span>
     </a>
