--- a/frontend/app/templates/dashboard/profile/index.hbs
+++ b/frontend/app/templates/dashboard/profile/index.hbs
@@ -20,6 +20,7 @@
      content=semesterNames
      value=model.activeSemester
      class='form-control'
+     id='activeSemester'
      prompt='Please select a semester'
      required='true'
   }}
