add social icons

--- a/frontend/app/templates/partials/_header.hbs
+++ b/frontend/app/templates/partials/_header.hbs
@@ -9,6 +9,7 @@
       </a>
       <div class="navbar-custom-menu">
         <ul class="nav navbar-nav">
+          {{social-icons}}
           {{user-menu}}
         </ul>
       </div>
@@ -26,6 +27,7 @@
 
         <div class="navbar-custom-menu">
           <ul class="nav navbar-nav">
+            {{social-icons}}
             {{#unless session.isAuthenticated}}
               <li>
                 {{#link-to 'register' id="register"}}
