design changes button tag

--- a/frontend/app/templates/components/user-menu.hbs
+++ b/frontend/app/templates/components/user-menu.hbs
@@ -22,7 +22,7 @@
       </li>
       <li class="user-footer">
         <div class="pull-left" {{action 'toggleDropdown' }}>
-          {{#link-to 'dashboard.profile.index' class='btn btn-default btn-flat'}}
+          {{#link-to 'dashboard.profile.index' class='btn btn-default btn-flat' tagName='button'}}
             Profile
           {{/link-to}}
         </div>
