styles for radio

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,6 +24,20 @@
     }
   }
 
+  .space {
+    margin: 100px 0;
+  }
+
+  .border-right {
+    border-right: #d2d6de 1px solid;
+  }
+  .radio-option {
+    font-size: 1.2em;
+  }
+  .p-radio {
+    padding: 5px 20px;
+    font-size: 1em;
+  }
   .small-box {
     box-shadow: none;
   }
